# codex-limit-monitor

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.svelte  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex.rs  lib.rs  main.rs
