[package]
name = "codex-limit-monitor"
version = "0.1.0"
description = "Codex usage limit menubar monitor"
edition = "2021"

[lib]
name = "codex_limit_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-ico", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
